@@ -104,6 +104,14 @@ Contributors:
       </td>
     </tr>
     <tr>
+      <td style="border: 1px solid #ccc; padding: 5px;"><strong><tt>Alt+D</tt></strong>
+      </td>
+      <td style="border: 1px solid #ccc; padding: 5px;"><strong><tt>Alt+D</tt></strong>
+      </td>
+      <td style="border: 1px solid #ccc; padding: 5px;">Switch between default and strict editing modes</td>
+      <td style="border: 1px solid #ccc; padding: 5px;"> </td>
+    </tr>
+    <tr>
       <td style="border: 1px solid #ccc; padding: 5px;"><strong><tt>&lt;Enter&gt;</tt></strong>
       </td>
       <td style="border: 1px solid #ccc; padding: 5px;"><strong><tt>&lt;Enter&gt;</tt></strong>
@@ -340,6 +348,14 @@ Contributors:
       </td>
       <td style="border: 1px solid #ccc; padding: 5px;"><strong>Example(s)</strong>
       </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 5px;"><strong><tt>Alt+D</tt></strong>
+      </td>
+      <td style="border: 1px solid #ccc; padding: 5px;"><strong><tt>Alt+D</tt></strong>
+      </td>
+      <td style="border: 1px solid #ccc; padding: 5px;">Switch between default and strict editing modes</td>
+      <td style="border: 1px solid #ccc; padding: 5px;"> </td>
     </tr>
     <tr>
       <td style="border: 1px solid #ccc; padding: 5px;"><strong><tt>&lt;Tab&gt;</tt></strong>
