@@ -36,6 +36,9 @@ Internally, Counterclockwise now uses Clojure 1.7.0-master. It adds a couple pat
 - New Clojure Project Wizard honors the 'use previous location' checkbox. Fixes #682
 - Better support for clojure extension files: `cljs`, `cljx`, `clja`
 
+=== Documentation
+- Add a mention about keyboard binding for switching between default and strict editing modes ( kbd:[Alt+D] ). Fixes #346
+
 
 == Changes between Counterclockwise 0.31.1 and 0.31.2
 
